k8s/istio/helloworld-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - route:
        - destination:
            host: helloworld
            port:
              number: 8000
